--- a/index.html
+++ b/index.html
@@ -1,197 +1,206 @@
 <!DOCTYPE html>
 <html lang="id">
 <head>
-  <meta charset="utf-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>SukiTik | download tiktok & ig tanpa watermark - sukistore.me</title>
-
-  <style>
-    body {
-      margin: 0;
-      font-family: arial, sans-serif;
-      background: url('https://files.catbox.moe/y4kzjx.png') no-repeat center center fixed;
-      background-size: cover;
-      color: white;
-      overflow: hidden;
-    }
-
-    .container {
-      text-align: center;
-      margin-top: 10vh;
-      position: relative;
-      z-index: 1;
-    }
-
-    .logo {
-      width: 24px;
-      height: 24px;
-      vertical-align: middle;
-      margin-left: 8px;
-    }
-
-    input, button {
-      font-size: 16px;
-      padding: 10px;
-      border: none;
-      border-radius: 10px;
-      backdrop-filter: blur(10px);
-      background: rgba(255, 255, 255, 0.1);
-      color: white;
-      margin: 10px 0;
-      transition: all 0.2s ease;
-      box-shadow: 0 0 8px rgba(0,0,0,0.2);
-    }
-
-    input::placeholder {
-      color: #eee;
-    }
-
-    input {
-      width: 80%;
-    }
-
-    button:hover {
-      background: rgba(255, 255, 255, 0.2);
-    }
-
-    .credit {
-      font-size: 14px;
-      margin-top: 6px;
-      color: white;
-    }
-
-    .menu-button {
-      position: fixed;
-      top: 10px;
-      right: 10px;
-      font-size: 20px;
-      padding: 5px 12px;
-      border-radius: 10px;
-      z-index: 10;
-      background: rgba(255,255,255,0.1);
-      color: white;
-      backdrop-filter: blur(10px);
-    }
-
-    .platform-menu {
-      display: none;
-      position: fixed;
-      top: 50px;
-      right: 10px;
-      background: rgba(255,255,255,0.1);
-      padding: 10px;
-      border-radius: 10px;
-      z-index: 10;
-      backdrop-filter: blur(10px);
-    }
-
-    .platform-menu button {
-      display: block;
-      width: 100%;
-      margin: 5px 0;
-      background: rgba(255, 255, 255, 0.1);
-      color: white;
-      padding: 8px;
-      border-radius: 6px;
-      cursor: pointer;
-    }
-
-    .hidden {
-      display: none;
-    }
-  </style>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>sukitik | download tiktok & ig tanpa watermark - sukistore.me</title>
+  <script>
+    document.addEventListener('contextmenu', e => {
+      alert('😺 kode disembunyiin, gak bisa disalin ya!');
+      e.preventDefault();
+    });
+    window.addEventListener("keydown", e => {
+      if (
+        e.keyCode === 123 ||
+        (e.ctrlKey && e.shiftKey && e.keyCode === 73) ||
+        (e.ctrlKey && e.keyCode === 85) ||
+        (e.ctrlKey && e.keyCode === 83)
+      ) {
+        alert("😹 kode disembunyiin yaaa hehe");
+        e.preventDefault();
+      }
+    });
+  </script>
+  <style>
+    body {
+      margin: 0;
+      font-family: Arial, sans-serif;
+      background: url('planet.png') no-repeat center center fixed;
+      background-size: cover;
+      color: white;
+      overflow: hidden;
+      transition: transform 0.1s;
+    }
+    .container {
+      text-align: center;
+      margin-top: 10vh;
+      position: relative;
+      z-index: 1;
+    }
+    .logo {
+      width: 24px;
+      height: 24px;
+      vertical-align: middle;
+      margin-left: 8px;
+    }
+    input, button {
+      font-size: 16px;
+      padding: 10px;
+      border: none;
+      border-radius: 5px;
+    }
+    input {
+      width: 80%;
+      margin: 10px 0;
+    }
+    button {
+      background: #d80000;
+      color: white;
+      cursor: pointer;
+    }
+    .credit {
+      font-size: 14px;
+      margin-top: 6px;
+      color: #ccc;
+    }
+    .menu-button {
+      position: fixed;
+      top: 10px;
+      right: 10px;
+      background: #d80000;
+      color: white;
+      font-size: 20px;
+      padding: 5px 12px;
+      border: none;
+      cursor: pointer;
+      border-radius: 6px;
+      z-index: 10;
+    }
+    .platform-menu {
+      display: none;
+      position: fixed;
+      top: 50px;
+      right: 10px;
+      background: rgba(0,0,0,0.8);
+      padding: 10px;
+      border-radius: 6px;
+      z-index: 10;
+    }
+    .platform-menu button {
+      display: block;
+      width: 100%;
+      margin: 5px 0;
+      background: #fff;
+      color: #000;
+      border: none;
+      padding: 8px;
+      border-radius: 4px;
+      cursor: pointer;
+    }
+    .hidden { display: none; }
+  </style>
 </head>
 <body>
+  <button class="menu-button" onclick="toggleMenu()">=</button>
+  <div id="platformMenu" class="platform-menu">
+    <button onclick="switchPlatform('tiktok')">TikTok</button>
+    <button onclick="switchPlatform('instagram')">Instagram</button>
+  </div>
 
-  <button class="menu-button" onclick="toggleMenu()">=</button>
-  <div id="platformMenu" class="platform-menu">
-    <button onclick="switchPlatform('tiktok')">TikTok</button>
-    <button onclick="switchPlatform('instagram')">Instagram</button>
-  </div>
+  <div class="container">
+    <h1>SukiTik <img src="astronot-logo.png" alt="logo" class="logo" /></h1>
+    <div class="credit">By Beva Anjas Ganteng Gurinjayyyyyy 😎🔥</div>
+    <p id="desc">download video tiktok tanpa watermark dari <strong>sukistore.me</strong></p>
 
-  <div class="container">
-    <h1>SukiTik <img src="astronot-logo.png" alt="logo" class="logo" /></h1>
-    <div class="credit">By Beva Anjas Ganteng Gurinjayyyyyy 😎🔥</div>
-    <p id="desc">download video tiktok tanpa watermark dari <strong>sukistore.me</strong></p>
+    <div id="tiktokForm">
+      <input id="tiktokURL" placeholder="tempel link tiktok disini ya..." />
+      <button onclick="downloadTiktok()">Download</button>
+      <div id="tiktokResult" style="margin-top:20px;"></div>
+    </div>
 
-    <!-- TikTok Form -->
-    <div id="tiktokForm">
-      <input id="tiktokURL" placeholder="tempel link tiktok disini ya..." />
-      <button onclick="downloadTiktok()">download</button>
-      <div id="tiktokResult" style="margin-top:20px;"></div>
-    </div>
+    <div id="instagramForm" class="hidden">
+      <input id="igURL" placeholder="tempel link instagram disini ya..." />
+      <button onclick="downloadInstagram()">Download</button>
+      <div id="igResult" style="margin-top:20px;"></div>
+    </div>
+  </div>
 
-    <!-- Instagram Form -->
-    <div id="instagramForm" class="hidden">
-      <input id="igURL" placeholder="fitur instagram lagi perawatan" disabled />
-      <button onclick="downloadInstagram()">download</button>
-      <div id="igResult" style="margin-top:20px;"></div>
-    </div>
-  </div>
+  <script>
+    function toggleMenu() {
+      const m = document.getElementById("platformMenu");
+      m.style.display = m.style.display === "block" ? "none" : "block";
+    }
 
-  <script>
-    function toggleMenu() {
-      const m = document.getElementById("platformMenu");
-      m.style.display = m.style.display === "block" ? "none" : "block";
-    }
+    function switchPlatform(p) {
+      document.getElementById("tiktokForm").classList.add("hidden");
+      document.getElementById("instagramForm").classList.add("hidden");
+      if (p === "tiktok") {
+        document.getElementById("desc").innerHTML = 'download video tiktok tanpa watermark dari <strong>sukistore.me</strong>';
+        document.getElementById("tiktokForm").classList.remove("hidden");
+      } else {
+        document.getElementById("desc").innerHTML = 'download video instagram yang <strong>jadi post, reels, atau story</strong> dari <strong>sukistore.me</strong>';
+        document.getElementById("instagramForm").classList.remove("hidden");
+      }
+      toggleMenu();
+    }
+  </script>
 
-    function switchPlatform(p) {
-      document.getElementById("tiktokForm").classList.add("hidden");
-      document.getElementById("instagramForm").classList.add("hidden");
-      if (p === "tiktok") {
-        document.getElementById("desc").innerHTML = 'download video tiktok tanpa watermark dari <strong>sukistore.me</strong>';
-        document.getElementById("tiktokForm").classList.remove("hidden");
-      } else {
-        document.getElementById("desc").innerHTML = 'fitur instagram lagi dalam perawatan 😿';
-        document.getElementById("instagramForm").classList.remove("hidden");
-      }
-      toggleMenu();
-    }
+  <script>
+    async function resolveFinalURL(u) {
+      if (u.includes("vt.tiktok.com")) {
+        try {
+          const r = await fetch(u, { method: 'HEAD', redirect: 'follow' });
+          return r.url || u;
+        } catch { return u; }
+      }
+      return u;
+    }
 
-    async function resolveFinalURL(u) {
-      if (u.includes("vt.tiktok.com")) {
-        try {
-          const r = await fetch(u, { method: 'HEAD', redirect: 'follow' });
-          return r.url || u;
-        } catch {
-          return u;
-        }
-      }
-      return u;
-    }
+    async function downloadTiktok() {
+      const input = document.getElementById("tiktokURL").value.trim();
+      if (!input) return alert("tempel link tiktok dulu!");
+      const finalURL = await resolveFinalURL(input);
+      fetch(`https://tikwm.com/api/?url=${encodeURIComponent(finalURL)}`)
+        .then(r => r.json())
+        .then(d => {
+          if (d?.data?.play) {
+            document.getElementById("tiktokResult").innerHTML =
+              `<a href="${d.data.play}" target="_blank"><button>Download Now</button></a>`;
+          } else {
+            document.getElementById("tiktokResult").innerText = "video tidak ditemukan!";
+          }
+        })
+        .catch(() => {
+          document.getElementById("tiktokResult").innerText = "gagal mengambil video";
+        });
+    }
 
-    async function downloadTiktok() {
-      const input = document.getElementById("tiktokURL").value.trim();
-      if (!input) return alert("tempel link tiktok dulu ya!");
-      const finalURL = await resolveFinalURL(input);
+    async function downloadInstagram() {
+      const input = document.getElementById("igURL").value.trim();
+      if (!input) return alert("tempel link instagram dulu!");
+      fetch(`https://instagram-reel-api.onrender.com?url=${encodeURIComponent(input)}`)
+        .then(r => r.json())
+        .then(d => {
+          if (d?.download_link) {
+            document.getElementById("igResult").innerHTML =
+              `<a href="${d.download_link}" target="_blank"><button>Download Now</button></a>`;
+          } else {
+            document.getElementById("igResult").innerText = "video tidak ditemukan!";
+          }
+        })
+        .catch(() => {
+          document.getElementById("igResult").innerText = "gagal mengambil video";
+        });
+    }
+  </script>
 
-      fetch(`https://tikwm.com/api/?url=${encodeURIComponent(finalURL)}`)
-        .then(r => r.json())
-        .then(d => {
-          if (d?.data?.play) {
-            const videoUrl = d.data.play;
-
-            const link = document.createElement("a");
-            link.href = videoUrl;
-            link.download = "tiktok.mp4";
-            document.body.appendChild(link);
-            link.click();
-            document.body.removeChild(link);
-
-            document.getElementById("tiktokResult").innerHTML =
-              `<div style="color:white">video siap didownload 😎</div>`;
-          } else {
-            document.getElementById("tiktokResult").innerText = "video gak ketemu 😢";
-          }
-        })
-        .catch(() => {
-          document.getElementById("tiktokResult").innerText = "gagal ambil video";
-        });
-    }
-
-    function downloadInstagram() {
-      document.getElementById("igResult").innerText = "fitur instagram lagi maintance 😿. tunggu update selanjutnya ya!";
-    }
-  </script>
+  <script>
+    document.addEventListener("mousemove", e => {
+      const x = (e.clientX / window.innerWidth - 0.5) * 20;
+      const y = (e.clientY / window.innerHeight - 0.5) * 20;
+      document.body.style.transform =
+        `perspective(1000px) rotateY(${x}deg) rotateX(${-y}deg)`;
+    });
+  </script>
 </body>
 </html>
