--- a/index.html
+++ b/index.html
@@ -132,7 +132,7 @@
     <p id="desc">download video tiktok tanpa watermark dari <strong>sukistore.me</strong></p>
 
     <div id="tiktokForm">
-      <textarea id="tiktokURL" rows="4" placeholder="tempel banyak link tiktok disini, pisahkan enter..."></textarea>
+      <textarea id="tiktokURL" rows="4" placeholder="tempel link tiktok.."></textarea>
       <button onclick="multiDownloadTiktok()">Download Semua</button>
       <div id="tiktokResult" style="margin-top:20px;"></div>
     </div>
