--- a/index.html
+++ b/index.html
@@ -133,7 +133,7 @@
 
     <div id="tiktokForm">
       <textarea id="tiktokURL" rows="4" placeholder="tempel link tiktok.."></textarea><br>
-      <button onclick="multiDownloadTiktok('video')">Download Video</button>
+      <button onclick="multiDownloadTiktok('video')">Download Now</button>
       <button onclick="multiDownloadTiktok('audio')">Download Audio</button>
       <div id="tiktokResult" style="margin-top:20px;"></div>
     </div>
