--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
       alert('😺 cium dong 🗿');
       e.preventDefault();
     });
+
     window.addEventListener("keydown", e => {
       if (
         e.keyCode === 123 ||
@@ -32,23 +33,28 @@
       overflow-x: hidden;
       transition: transform 0.1s;
     }
+
     .fadein { animation: fadeIn 1.3s ease-in-out both; }
+
     @keyframes fadeIn {
       0% { opacity: 0; transform: scale(0.98); }
       100% { opacity: 1; transform: scale(1); }
     }
+
     .container {
       text-align: center;
       margin-top: 10vh;
       position: relative;
       z-index: 1;
     }
+
     .logo {
       width: 24px;
       height: 24px;
       vertical-align: middle;
       margin-left: 8px;
     }
+
     input, textarea, button {
       font-size: 16px;
       padding: 10px;
@@ -59,19 +65,23 @@
       color: white;
       box-shadow: 0 4px 12px rgba(0, 0, 0, 0.2);
     }
+
     textarea, input {
       width: 80%;
       margin: 10px 0;
       resize: vertical;
     }
+
     button:hover {
       background: rgba(255, 255, 255, 0.2);
     }
+
     .credit {
       font-size: 14px;
       margin-top: 6px;
       color: #ccc;
     }
+
     .menu-button {
       position: fixed;
       top: 10px;
@@ -85,6 +95,7 @@
       backdrop-filter: blur(6px);
       z-index: 10;
     }
+
     .platform-menu {
       display: none;
       position: fixed;
@@ -96,6 +107,7 @@
       z-index: 10;
       backdrop-filter: blur(4px);
     }
+
     .platform-menu button {
       display: block;
       width: 100%;
@@ -103,7 +115,9 @@
       color: white;
       background: rgba(255,255,255,0.1);
     }
+
     .hidden { display: none; }
+
     .image-gallery img {
       max-width: 100px;
       margin: 5px;
@@ -124,15 +138,15 @@
     <p id="desc">download video tiktok tanpa watermark dari <strong>sukistore.me</strong></p>
 
     <div id="tiktokForm">
-      <textarea id="tiktokURL" rows="4" placeholder="tempel link tiktok.."></textarea><br>
-      <button onclick="multiDownloadTiktok('video')">Download Video</button>
-      <button onclick="multiDownloadTiktok('audio')">Download Audio</button>
-      <button onclick="multiDownloadTiktok('photo')">Download Foto</button>
+      <textarea id="tiktokURL" rows="4" placeholder="tempelin link tiktok nya di sini..."></textarea><br>
+      <button onclick="multiDownloadTiktok('video')">Download Video 🎥</button>
+      <button onclick="multiDownloadTiktok('audio')">Download Audio 🎧</button>
+      <button onclick="multiDownloadTiktok('photo')">Download Foto 🖼️</button>
       <div id="tiktokResult" style="margin-top:20px;"></div>
     </div>
 
     <div id="instagramForm" class="hidden">
-      <input id="igURL" disabled value="Instagram sedang maintenance..." />
+      <input id="igURL" disabled value="Instagram lagi istirahat 😴" />
       <button disabled>Maintenance</button>
       <div id="igResult" style="margin-top:20px;color:#ccc;font-style:italic;">Harap bersabar ya!</div>
     </div>
@@ -147,13 +161,15 @@
     function switchPlatform(p) {
       document.getElementById("tiktokForm").classList.add("hidden");
       document.getElementById("instagramForm").classList.add("hidden");
+
       if (p === "tiktok") {
         document.getElementById("desc").innerHTML = 'download video tiktok tanpa watermark dari <strong>sukistore.me</strong>';
         document.getElementById("tiktokForm").classList.remove("hidden");
       } else {
-        document.getElementById("desc").innerHTML = 'instagram sedang <strong>maintenance</strong>, harap bersabar ya 😿';
+        document.getElementById("desc").innerHTML = 'instagram lagi <strong>maintenance</strong>, sabar ya 😿';
         document.getElementById("instagramForm").classList.remove("hidden");
       }
+
       toggleMenu();
     }
 
@@ -162,58 +178,67 @@
         try {
           const r = await fetch(u, { method: 'HEAD', redirect: 'follow' });
           return r.url || u;
-        } catch { return u; }
+        } catch {
+          return u;
+        }
       }
       return u;
     }
 
     async function multiDownloadTiktok(type = 'video') {
       const input = document.getElementById("tiktokURL").value.trim();
-      if (!input) return alert("tempel link tiktok dulu!");
+      if (!input) return alert("tempelin link dulu dong 😅");
+
       const links = input.split('\n').map(l => l.trim()).filter(Boolean);
-      document.getElementById("tiktokResult").innerHTML = "⏳ Sedang memproses semua link...";
+      document.getElementById("tiktokResult").innerHTML = "⏳ lagi diproses sabar yee...";
 
       let output = '';
+
       for (const link of links) {
         let url = await resolveFinalURL(link);
+
         try {
           const res = await fetch(`https://tikwm.com/api/?url=${encodeURIComponent(url)}`);
           const json = await res.json();
           const data = json.data;
+
           if (!data) {
-            output += `<p>⚠️ gagal mengambil data untuk: ${url}</p>`;
+            output += `<p>⚠️ gagal ambil data buat: ${url}</p>`;
             continue;
           }
 
           output += `<p><strong>Link:</strong> ${url}</p>`;
 
           if (type === 'audio') {
-            if (data.music) {
-              output += `<a href="${data.music}" target="_blank"><button>Download Audio 🎵</button></a>`;
-            } else {
-              output += `<p>⚠️ tidak ada audio untuk: ${url}</p>`;
-            }
-          } else if (type === 'video') {
+            output += data.music
+              ? `<a href="${data.music}" target="_blank"><button>Download Audio 🎵</button></a>`
+              : `<p>⚠️ gak nemu audio-nya buat: ${url}</p>`;
+          }
+
+          else if (type === 'video') {
             if (data.play) {
               if (data.images && data.images.length > 0) {
-                output += `<p>⚠️ itu link foto bree, bukan video. Coba pilih tombol Foto!</p>`;
+                output += `<p>⚠️ itu kayaknya foto bre, bukan video. coba klik tombol Foto 🖼️ ya!</p>`;
               } else {
                 output += `<a href="${data.play}" target="_blank"><button>Download Video 📹</button></a>`;
               }
             } else {
-              output += `<p>⚠️ tidak ada video untuk: ${url}</p>`;
-            }
-          } else if (type === 'photo') {
-            if (data.images && data.images.length > 0) {
-              data.images.forEach((img, i) => {
-                output += `<a href="${img}" target="_blank"><button>Foto ${i+1}</button></a> `;
-              });
-            } else {
-              output += `<p>⚠️ itu bukan slide foto bre, tapi video. coba pilih tombol Video!</p>`;
+              output += `<p>⚠️ gak nemu video-nya buat: ${url}</p>`;
             }
           }
+
+          else if (type === 'photo') {
+            if (data.images && data.images.length > 0) {
+              data.images.forEach((img, i) => {
+                output += `<a href="${img}" target="_blank"><button>Foto ${i + 1}</button></a> `;
+              });
+            } else {
+              output += `<p>⚠️ itu bukan foto slide bro, coba klik tombol Video 🎥</p>`;
+            }
+          }
+
         } catch {
-          output += `<p>❌ error mengambil: ${url}</p>`;
+          output += `<p>❌ error ngambil: ${url}</p>`;
         }
       }
 
