--- a/index.html
+++ b/index.html
@@ -146,7 +146,7 @@
     </div>
 
     <div id="instagramForm" class="hidden">
-      <input id="igURL" disabled value="Instagram lagi istirahat 😴" />
+      <input id="igURL" disabled value="Instagram lagi mt 😴" />
       <button disabled>Maintenance</button>
       <div id="igResult" style="margin-top:20px;color:#ccc;font-style:italic;">Harap bersabar ya!</div>
     </div>
